--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="mdui-card-content mdui-typo">
 		    <center>
 		    <img alt="Fmkli的靓照" src="./fmkli.png" width="100" height="100">
-                    <p>欢迎小可爱！关于Fmkli的信息可以看看<a href="https://blog.imfmkli.top/about.html">https://blog.imfmkli.top/about.html</a>
+                    <p>欢迎小可爱！关于Fmkli的信息可以看看<a href="https://blog.imfmkli.top/about">https://blog.imfmkli.top/about</a>
                     <br>这个主页我自个用mdui写的，嘿嘿嘿
                     </p>
 		    </center>
