--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
     <!-- 抽屉栏 -->
-    <div class="mdui-drawer mdui-color-white mdui-drawer-close" id="left-drawer">
+    <div class="mdui-drawer mdui-color-white mdui-drawer-close mdui-drawer-full-height" id="left-drawer">
         <ul class="mdui-list">
             <li class="mdui-subheader">你拉开了这个网站的抽屉！</li>
 
