--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <title>鸽子主页~</title>
     <link rel="stylesheet" href="./mdui/css/mdui.min.css"/>
-    <link rel="stylesheet" href="./home.css"/>
+    <!-- <link rel="stylesheet" href="./home.css"/> -->
     <meta name="google-site-verification" content="PDfOR7Ln1L0DHk6oRWA7dx8WcM4f4XYBwW3LkK18v44" />
     <style>
 	/* 方法一
