--- a/talk2.html
+++ b/talk2.html
@@ -14,10 +14,12 @@
                 <!-- 卡片的内容 -->
                 <div class="mdui-card-content mdui-typo">
 
-<script src="//cdn.jsdelivr.net/npm/@waline/client"></script>
+<script src='//unpkg.com/@waline/client@v2/dist/waline.js'></script>
+<link href='//unpkg.com/@waline/client@v2/dist/waline.css' rel='stylesheet' />
+
   <div id="waline"></div>
   <script>
-    Waline({
+    Waline.init({
       el: '#waline',
       serverURL: 'https://waline.imfmkli.top/',
     });
