--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <br><a class="lianjie" href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
                 <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                 <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>
+                <br><p>本战虽丑，但又不是不能用</p>
             </div>
         </div><br>
         
