--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <title>鸽子主页</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+        <link rel='stylesheet' type='text/css' media='screen' href='style2333.css'>
     </head>
     <body onload="conlog()">
         <div class="no-ic-card-head">
