--- a/fmkli.html
+++ b/fmkli.html
@@ -30,7 +30,7 @@
                 <h2>屑鸽子Fmkli</h2>
                 <img src="https://www.imfmkli.top/fmkli.png" width="100" height="100">
                 <p>欢迎小可爱！关于Fmkli的信息可以看看<a class="gd-button gd-h gd-rc" href="https://blog.imfmkli.top/about">https://blog.imfmkli.top/about</a></p>
-                <p>这个主页我自个用GDUI写的，感谢原罪的CSS嘿嘿嘿</p>
+                <p>这个主页是原罪用用GDUI写的，感谢原罪嘿嘿嘿</p>
 
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
