--- a/fmkli.html
+++ b/fmkli.html
@@ -16,9 +16,23 @@
         <!-- 网站折叠栏 -->
         <div class="gd-drawer gd-shadow-20 gd-color-white-fill" id="drawer">
             <t>菜单</t>
-            <li class="gd-rc-1 gd-h">abaaba</li>
-            <li class="gd-rc-1 gd-h">bababa</li>
+            <li class="gd-rc-1 gd-h"><a href="https://www.imfmkli.top" class="lianjie">鸽子の主页</a></li>
+            <li class="gd-rc-1 gd-h"><a href="https://blog.imfmkli.top" class="lianjie">鸽のBlog</a></li>
+            <li class="gd-rc-1 gd-h"><a href="https://bbs.imfmkli.top" class="lianjie">鸽の论坛</a></li>
+            <li class="gd-rc-1 gd-h"><a href="https://status.imfmkli.top/" class="lianjie">鸽の探针</a></li>
             <hr>
+            <li class="gd-rc-1 gd-h"><a href="https://imfmkli.top/website%20navigation/" class="lianjie">网址导航</a></li>
+            <li class="gd-rc-1 gd-h"><a href="https://chat.getloli.com/room/@fmkli" class="lianjie">网页聊天室</a></li>
+            <hr>
+            <li class="gd-rc-1 gd-h"><a href="https://dino.imfmkli.top" class="lianjie">咕果踩蛋之恐龙</a></li>
+            <li class="gd-rc-1 gd-h"><a href="https://sg.imfmkli.top/?lang=zh_cn" class="lianjie">ADarkRoom</a></li
+            <li class="gd-rc-1 gd-h"><a href="https://eatkano.imfmkli.top/" class="lianjie">吃掉小菜狗</a></li>
+            <hr>
+            <li class="gd-rc-1 gd-h"><a href="https://github.com/fmkli" class="lianjie"><del>Gayhub</del>Github</a></li>
+            <li class="gd-rc-1 gd-h"><a href="https://space.bilibili.com/54382580" class="lianjie">BiliBili</a></li>
+            <li class="gd-rc-1 gd-h"><a href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2" class="lianjie"><del>希希达不溜</del>ccw</a></li>
+            <li class="gd-rc-1 gd-h"><a href="mailto:fmkli2@qq.com" class="lianjie"><del>伊妹儿</del>Email</a></li>
+            
         </div>
         <!-- 网站内容 -->
         <div class="gd-main-1">
@@ -49,7 +63,12 @@
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
                 <div class="gd-article">
                     <p>Copyright &copy; 2022 Fmkli. All rights reserved.</p>
-                    <p>Theme by Grass Design.</p>
+                    <a class="lianjie" rel="noopener" class="icpgrass" href="https://union.estu.site/" target="_blank">草GUC-20220166</a>
+                    <br><a class="lianjie" href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
+                    <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
+                    <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>
+                    <br><p>本战虽丑，但又不是不能用</p>
+                    <br><p>Theme by Grass Design.</p>
                 </div>
             </div>
         </div>
