--- a/fmkli.html
+++ b/fmkli.html
@@ -5,7 +5,7 @@
         <title>鸽子主页~</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="font.css">
-        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="./jquery.min.js"></script>
     </head>
     <body style="background-color:rgb(247,249,250)">
         <!-- 网站顶栏 -->
