--- a/fmkli.html
+++ b/fmkli.html
@@ -15,23 +15,25 @@
         </div>
         <!-- 网站折叠栏 -->
         <div class="gd-drawer gd-shadow-20 gd-color-white-fill" id="drawer">
-            <t>菜单</t>
+            <t>菜单</t><br>
+            <t>主要位置</t>
             <li class="gd-rc-1 gd-h"><a href="https://www.imfmkli.top" class="lianjie">鸽子の主页</a></li>
             <li class="gd-rc-1 gd-h"><a href="https://blog.imfmkli.top" class="lianjie">鸽のBlog</a></li>
             <li class="gd-rc-1 gd-h"><a href="https://bbs.imfmkli.top" class="lianjie">鸽の论坛</a></li>
             <li class="gd-rc-1 gd-h"><a href="https://status.imfmkli.top/" class="lianjie">鸽の探针</a></li>
-            <hr>
+            <hr><t>随便搞的</t>
             <li class="gd-rc-1 gd-h"><a href="https://imfmkli.top/website%20navigation/" class="lianjie">网址导航</a></li>
             <li class="gd-rc-1 gd-h"><a href="https://chat.getloli.com/room/@fmkli" class="lianjie">网页聊天室</a></li>
-            <hr>
+            <hr><t>Game！</t>
             <li class="gd-rc-1 gd-h"><a href="https://dino.imfmkli.top" class="lianjie">咕果踩蛋之恐龙</a></li>
             <li class="gd-rc-1 gd-h"><a href="https://sg.imfmkli.top/?lang=zh_cn" class="lianjie">ADarkRoom</a></li>
             <li class="gd-rc-1 gd-h"><a href="https://eatkano.imfmkli.top/" class="lianjie">吃掉小菜狗</a></li>
-            <hr>
+            <hr><t>来找我挖~</t>
             <li class="gd-rc-1 gd-h"><a href="https://github.com/fmkli" class="lianjie"><del>Gayhub</del>Github</a></li>
             <li class="gd-rc-1 gd-h"><a href="https://space.bilibili.com/54382580" class="lianjie">BiliBili</a></li>
             <li class="gd-rc-1 gd-h"><a href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2" class="lianjie"><del>希希达不溜</del>ccw</a></li>
             <li class="gd-rc-1 gd-h"><a href="mailto:fmkli2@qq.com" class="lianjie"><del>伊妹儿</del>Email</a></li>
+            <li class="gd-rc-1 gd-h"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2058264685&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:2058264685:41" alt="来找我啊~" title="来找我啊~"/></a></li>
             
         </div>
         <!-- 网站内容 -->
