--- a/fmkli.html
+++ b/fmkli.html
@@ -15,8 +15,10 @@
         </div>
         <!-- 网站折叠栏 -->
         <div class="gd-drawer gd-shadow-20 gd-color-white-fill" id="drawer">
-            <t>菜单</t><br>
-            <t>主要位置</t>
+            <t>
+                菜单<hr>
+                主要位置
+            </t>
             <a href="https://www.imfmkli.top" class="lianjie"><li class="gd-rc-1 gd-h">鸽子の主页</li></a>
             <a href="https://blog.imfmkli.top" class="lianjie"><li class="gd-rc-1 gd-h">鸽のBlog</li></a>
             <a href="https://bbs.imfmkli.top" class="lianjie"><li class="gd-rc-1 gd-h">鸽の论坛</li></a>
