--- a/fmkli.html
+++ b/fmkli.html
@@ -35,7 +35,7 @@
             <a href="https://space.bilibili.com/54382580" class="lianjie"><li class="gd-rc-1 gd-h">BiliBili</a></li></a>
             <a href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2" class="lianjie"><li class="gd-rc-1 gd-h"><del>希希达不溜</del>ccw</li></a>
             <a href="mailto:fmkli2@qq.com" class="lianjie"><li class="gd-rc-1 gd-h"><del>伊妹儿</del>Email</li></a>
-            <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2058264685&site=qq&menu=yes"><li class="gd-rc-1 gd-h"><img border="0" src="http://wpa.qq.com/pa?p=2:2058264685:41" alt="来找我啊~" title="来找我啊~"/></li></a>
+            <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=2058264685&site=qq&menu=yes"><li class="gd-rc-1 gd-h">QQ</li>
             
         </div>
         <!-- 网站内容 -->
