--- a/fmkli.html
+++ b/fmkli.html
@@ -33,7 +33,7 @@
             <a href="https://github.com/fmkli" class="lianjie"><li class="gd-rc-1 gd-h"><del>Gayhub</del>Github</li></a>
             <a href="https://space.bilibili.com/54382580" class="lianjie"><li class="gd-rc-1 gd-h">BiliBili</a></li></a>
             <a href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2" class="lianjie"><li class="gd-rc-1 gd-h"><del>希希达不溜</del>ccw</li></a>
-            <a href="mailto:fmkli2@qq.com" class="lianjie"><li class="gd-rc-1 gd-h"><del>伊妹儿</del>Email</li></a>
+            <a href="javascript:GoodEmail();" class="lianjie"><li class="gd-rc-1 gd-h" id="idGoodEmail"><del>伊妹儿</del>Email</li></a>
             <a href="javascript:FuckQQ();"><li class="gd-rc-1 gd-h" id="idFuckQQ">QQ</li></a>
             
         </div>
