--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="lianjie" rel="noopener" class="icpgrass" href="https://union.estu.site/" target="_blank">草GUC-20220166</a>
                 <br><a class="lianjie" href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
                 <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>
-                <br><p>本战虽丑，但又不是不能用</p>
+                <br><p>本站虽丑，但又不是不能用</p>
             </div>
         </div><br>
         
