--- a/fmkli.html
+++ b/fmkli.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width">
         <title>鸽子主页~</title>
