--- a/fmkli.html
+++ b/fmkli.html
@@ -45,7 +45,7 @@
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5 gd-post-center">
                 <h2>屑鸽子Fmkli</h2>
-                <img src="https://www.imfmkli.top/fmkli.png" width="100" height="100">
+                <img src="https://www.imfmkli.top/fmkli.png" width="100" height="100" alt="菜菜鸽子的照片">
                 <p>欢迎小可爱！关于Fmkli的信息可以看看<a class="gd-button gd-h gd-rc" href="https://blog.imfmkli.top/about">https://blog.imfmkli.top/about</a></p>
                 <p>这个主页是原罪用用GDUI写的，感谢原罪嘿嘿嘿</p>
 
