--- a/fmkli.html
+++ b/fmkli.html
@@ -55,13 +55,13 @@
                 <div class="gd-article">
                     <h3>留言</h3>
                     <p>发布留言时，请遵守法律法规，禁止发布违法违规及政治相关内容；<br>请友好评论，保持对他人的尊重；<br>严禁发布广告；</p>
-                    <a herf="https://www.imfmkli.top/talk2.html" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">加载留言系统</a>
+                    <a href="https://www.imfmkli.top/talk2.html" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">加载留言系统</a>
                 </div>
                 <hr>
                 <div class="gd-article">
                     <h3>说说</h3>
                     <p>由于jsd拖慢网站速度，说说跳转去另一个页面</p>
-                    <a herf="https://www.imfmkli.top/say.html" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">加载说说</a>
+                    <a href="https://www.imfmkli.top/say.html" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">加载说说</a>
                 </div>
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
