--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
         <!-- 网页遮盖 -->
         <div class="gd-overlay" id="overlay"></div>
         <script src="./main.js"></script>
+        <script src="https://myhkw.cn/player/js/jquery.min.js" type="text/javascript"></script>
     </body>
 </html>
