--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img src="https://www.imfmkli.top/fmkli.png" width="100" height="100" alt="菜菜鸽子的照片">
                 <p>欢迎小可爱！关于Fmkli的信息可以看看<a class="gd-button gd-h gd-rc" href="https://blog.imfmkli.top/about">https://blog.imfmkli.top/about</a></p>
                 <p>这个主页是原罪用用GDUI写的，感谢原罪嘿嘿嘿</p>
-
+                <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=4010239&auto=1&height=66"></iframe>
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
                 <div class="gd-article">
