--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2" class="lianjie"><li class="gd-rc-1 gd-h"><del>希希达不溜</del>ccw</li></a>
             <a href="javascript:GoodEmail();" class="lianjie"><li class="gd-rc-1 gd-h" id="idGoodEmail"><del>伊妹儿</del>Email</li></a>
             <a href="javascript:FuckQQ();"><li class="gd-rc-1 gd-h" id="idFuckQQ">QQ</li></a>
-            <img class="gd-rc gd-shadow-20 gd-shadow-h-5 gd-box-margin-20" src="./nman.png" width="auto" height="auto" alt="大爱柠檬（广告）">
+            <img class="gd-rc gd-shadow-20 gd-shadow-h-5 gd-box-margin-20" src="./nman.png" alt="大爱柠檬（广告）">
             
         </div>
         <!-- 网站内容 -->
