--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
             <a href="https://space.bilibili.com/54382580" class="lianjie"><li class="gd-rc-1 gd-h">BiliBili</a></li></a>
             <a href="https://www.ccw.site/student/5d08e95bb73fd803276dd7b2" class="lianjie"><li class="gd-rc-1 gd-h"><del>希希达不溜</del>ccw</li></a>
             <a href="javascript:GoodEmail();" class="lianjie"><li class="gd-rc-1 gd-h" id="idGoodEmail"><del>伊妹儿</del>Email</li></a>
-            <a href="javascript:FuckQQ();"><li class="gd-rc-1 gd-h" id="idFuckQQ">QQ</li></a>
-            <img class="gd-rc gd-shadow-20 gd-shadow-h-5 gd-box-margin-20" src="./nman.png" width="auto" height="auto" alt="大爱柠檬（广告）">
-            
+            <a href="javascript:FuckQQ();"><li class="gd-rc-1 gd-h" id="idFuckQQ">QQ</li></a>            
         </div>
         <!-- 网站内容 -->
         <div class="gd-main-1">
@@ -73,6 +71,11 @@
                     <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>
                     <br><p>本站虽丑，但又不是不能用</p>
                     <br><p>Theme by Grass Design.</p>
+                </div>
+            </div>
+            <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
+                <div class="gd-article">
+                    <a href="https://blog.wz-software.top"><img class="gd-rc gd-shadow-20 gd-shadow-h-5 gd-box-margin-20" src="./nman.png" width="auto" height="auto" alt="大爱柠檬（广告）"></a>
                 </div>
             </div>
         </div>
