--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5 gd-post-center">
                 <h2>屑鸽子Fmkli</h2>
                 <img src="https://www.imfmkli.top/fmkli.png" width="100" height="100" alt="菜菜鸽子的照片">
-                <p>PS:泉州访客可能无法访问除本页外的其他网站</p>
+                <p>PS:泉州访客可能无法访问除本页外的其他网站
+                <br>找我就加我QQ</p>
                 <p>欢迎小可爱！关于Fmkli的信息可以看看<a class="gd-button gd-h gd-rc" href="https://blog.imfmkli.top/about">https://blog.imfmkli.top/about</a></p>
                 <p>这个主页是原罪用用GDUI写的，感谢原罪嘿嘿嘿</p>
             </div>
@@ -87,6 +88,5 @@
         <script>
             !function(p){"use strict";!function(t){var s=window,e=document,i=p,c="".concat("https:"===e.location.protocol?"https://":"http://","sdk.51.la/js-sdk-pro.min.js"),n=e.createElement("script"),r=e.getElementsByTagName("script")[0];n.type="text/javascript",n.setAttribute("charset","UTF-8"),n.async=!0,n.src=c,n.id="LA_COLLECT",i.d=n;var o=function(){s.LA.ids.push(i)};s.LA?s.LA.ids&&o():(s.LA=p,s.LA.ids=[],o()),r.parentNode.insertBefore(n,r)}()}({id:"JgapU3Sla12DMquS",ck:"JgapU3Sla12DMquS"});
         </script>
-        <script src="//code.tidio.co/6dto8kyviklqvdz7hzplghpoo77c2wsw.js" async></script>
     </body>
 </html>
