--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
                 <div class="gd-article" id="posts-label">
-                    <h3>最近的文章</h3>
-                    <div id="post-spinner"></div>
+                    <h3>鸽子博客文章的RRS</h3>
+                    <p>https://blog.imfmkli.top/atom.xml &nbsp; 欢迎订阅</p>
                 </div>
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
@@ -92,7 +92,6 @@
         <!-- 网页遮盖 -->
         <div class="gd-overlay" id="overlay"></div>
         <script src="./main.js"></script>
-        <script src="./home.js"></script>
         <script>
             !function(p){"use strict";!function(t){var s=window,e=document,i=p,c="".concat("https:"===e.location.protocol?"https://":"http://","sdk.51.la/js-sdk-pro.min.js"),n=e.createElement("script"),r=e.getElementsByTagName("script")[0];n.type="text/javascript",n.setAttribute("charset","UTF-8"),n.async=!0,n.src=c,n.id="LA_COLLECT",i.d=n;var o=function(){s.LA.ids.push(i)};s.LA?s.LA.ids&&o():(s.LA=p,s.LA.ids=[],o()),r.parentNode.insertBefore(n,r)}()}({id:"JgapU3Sla12DMquS",ck:"JgapU3Sla12DMquS"});
         </script>
