--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
                     <br><a class="lianjie" href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
                     <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                     <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>
-                    <br><p>本站虽丑，但又不是不能用
-                    <br><a href="https://v6.51.la/land/JgapU3Sla12DMquS">51.la统计</a></p>
+                    <br><p>本站虽丑，但又不是不能用</p>
                     <br><p>Theme by Grass Design.</p>
                 </div>
             </div>
@@ -92,8 +91,5 @@
         <!-- 网页遮盖 -->
         <div class="gd-overlay" id="overlay"></div>
         <script src="./main.js"></script>
-        <script>
-            !function(p){"use strict";!function(t){var s=window,e=document,i=p,c="".concat("https:"===e.location.protocol?"https://":"http://","sdk.51.la/js-sdk-pro.min.js"),n=e.createElement("script"),r=e.getElementsByTagName("script")[0];n.type="text/javascript",n.setAttribute("charset","UTF-8"),n.async=!0,n.src=c,n.id="LA_COLLECT",i.d=n;var o=function(){s.LA.ids.push(i)};s.LA?s.LA.ids&&o():(s.LA=p,s.LA.ids=[],o()),r.parentNode.insertBefore(n,r)}()}({id:"JgapU3Sla12DMquS",ck:"JgapU3Sla12DMquS"});
-        </script>
     </body>
 </html>
