--- a/index.html
+++ b/index.html
@@ -91,5 +91,7 @@
         <!-- 网页遮盖 -->
         <div class="gd-overlay" id="overlay"></div>
         <script src="./main.js"></script>
+        <script src="./langmain.js"></script>
+        <script src="./langcon.js"></script>
     </body>
 </html>
