--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <div class="gd-menu gd-shadow gd-color-white-fill">
             <i class="gd-icon" id="menu">&#xe900;</i>
             <a href="#"><h1>鸽の主页</h1></a>
+            <select class="gd-select-list gd-rc" id="lang">
+                <option value="zh-cn">Loading...</option>
+                <option value="zh-tw">Loading...</option>
+                <option value="en-us">Loading...</option>
+            </select>
         </div>
         <!-- 网站折叠栏 -->
         <div class="gd-drawer gd-shadow-20 gd-color-white-fill" id="drawer">
