--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
         <!-- 网页遮盖 -->
         <div class="gd-overlay" id="overlay"></div>
         <script src="./main.js"></script>
-        <script src="./langmain.js"></script>
-        <script src="./langcon.js"></script>
+<!-- <script src="./langmain.js"></script> <script src="./langcon.js"></scrip> -->
     </body>
 </html>
