--- a/index.html
+++ b/index.html
@@ -92,5 +92,6 @@
         <div class="gd-overlay" id="overlay"></div>
         <script src="./main.js"></script>
 <!-- <script src="./langmain.js"></script> <script src="./langcon.js"></scrip> -->
+        <script src="./wel.js"></script>
     </body>
 </html>
