--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" type="text/css" href="font.css">
         <script src="./jquery.min.js"></script>
     </head>
-    <body style="background-color:rgb(247,249,250)">
+    <body style="background-color:rgb(247,249,250)" onload="test();">
         <!-- 网站顶栏 -->
         <div class="gd-menu gd-shadow gd-color-white-fill">
             <i class="gd-icon" id="menu">&#xe900;</i>
