--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         </div>
         <!-- 网站内容 -->
         <div class="gd-main-1">
-            <div class="gd-box gd-box-pad-100-top gd-suit gd-rc gd-shadow-20 gd-shadow-h-5" id="contentss">
+            <div class="gd-box gd-box-pad-100-top gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
+                <h2><div id="contentss"></div></h2>
+                <h1><div id="contentsss"></div></h1>
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5 gd-post-center">
                 <h2>屑鸽子Fmkli</h2>
