--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5 gd-post-center">
                 <h2>屑鸽子Fmkli</h2>
-                <img src="https://www.imfmkli.top/fmkli.png" width="100" height="100" alt="菜菜鸽子的照片">
+                <img src="https://www.imfmkli.top/fmkli.png" width="100" height="100" alt="Fmkli的照片">
+                <img src="https://www.imfmkli.top/pigen.png" width="100" height="100" alt="菜菜鸽子的照片">
                 <br><span id="welcome">Loading........</span>
                 <p>PS:泉州访客可能无法访问除本页外的其他网站
                 <br>找我就加我QQ</p>
