--- a/goodpassword/index.html
+++ b/goodpassword/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>密码生成</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="./index.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
         <h2 class="title">随机密码文字</h2>
@@ -11,6 +11,6 @@
         <hr><button id="giveup" onclick="makeapassword();">提交</button>
         <hr><div class="error" id="error" style="color: red;">No Error</div>
         <h5></h1><div id="password" class="password">No Password</div></h5>
-        <script src="./index.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
