--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <img src="https://www.imfmkli.top/fmkli.png" width="100" height="100" alt="Fmkli的照片">
                 <img src="https://www.imfmkli.top/pigen.png" width="100" height="100" alt="菜菜鸽子的照片">
                 <br><span id="welcome">Loading........</span>
+                <div id="411119"></div>
                 <p>PS:泉州访客可能无法访问除本页外的其他网站
                 <br>找我就加我QQ</p>
                 <p>欢迎小可爱！关于Fmkli的信息可以看看<a class="gd-button gd-h gd-rc" href="https://blog.imfmkli.top/about">https://blog.imfmkli.top/about</a></p>
