--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="description" content="菜菜鸽子的主页，来吧来吧~"/>
         <title>鸽子主页~</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="markdown.css">
         <link rel="stylesheet" type="text/css" href="font.css">
         <script src="./jquery.min.js"></script>
     </head>
@@ -52,10 +53,23 @@
                 <div id="411119"></div>
                 <p>PS:泉州访客可能无法访问除本页外的其他网站
                 <br>找我就加我QQ</p>
-                <p>欢迎小可爱！关于Fmkli的信息可以看看<a class="gd-button gd-h gd-rc" href="https://blog.imfmkli.top/about">https://blog.imfmkli.top/about</a></p>
+                <p>欢迎小可爱！关于Fmkli的信息可以看看下面的简介</p>
                 <p>这个主页是原罪用用GDUI写的，感谢原罪嘿嘿嘿</p>
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
+                <div class="gd-article">
+                    <h3>About</h3>
+                    <article class="markdown-body">
+                        <p><img src="https://img.shields.io/badge/Blog-https%3A%2F%2Fblog.imfmkli.top-blue" alt="My Blog"> <img src="https://img.shields.io/badge/BiliBili-%E7%83%A4%E5%85%A8%E9%B8%BDFmkli-blue" alt="My BiliBili"></p>
+                          <ul>
+                            <li>我是Fmkli，一只鸽鸽子，咕了很久</li>
+                            <li>啥都学不会，只会一点点HTML / CSS / JavaScript</li>
+                            <li>目前没有正在学习的东西~（</li>
+                            <li>你可以通过邮箱 fmkli2#qq.com （# =&gt; @）或者通过 QQ 号：二零五八二六四六八五，其他社区の账号已在主页侧边栏内</li>
+                            <li>我开网站已经有了两年</li>
+                          </ul>
+                      </article>
+                </div>
                 <div class="gd-article">
                     <h3>留言</h3>
                     <p>发布留言时，请遵守法律法规，禁止发布违法违规及政治相关内容；<br>请友好评论，保持对他人的尊重；<br>严禁发布广告；</p>
@@ -66,12 +80,6 @@
                     <h3>说说</h3>
                     <p>由于jsd拖慢网站速度，说说跳转去另一个页面</p>
                     <a href="https://www.imfmkli.top/say.html" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">加载说说</a>
-                </div>
-            </div>
-            <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
-                <div class="gd-article" id="posts-label">
-                    <h3>鸽子博客文章的RRS</h3>
-                    <p>https://blog.imfmkli.top/atom.xml &nbsp; 欢迎订阅</p>
                 </div>
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
