--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <li>我是Fmkli，一只鸽鸽子，咕了很久</li>
                             <li>啥都学不会，只会一点点HTML / CSS / JavaScript</li>
                             <li>目前没有正在学习的东西~（</li>
-                            <li>你可以通过邮箱 fmkli2#qq.com （# =&gt; @）或者通过 QQ 号：二零五八二六四六八五，其他社区の账号已在主页侧边栏内</li>
+                            <li>你可以通过邮箱 fmkli2#qq.com （# =&gt; @）或者通过 QQ 号：二零五八二六四六八五 来联系我，其他社区の账号已在主页侧边栏内</li>
                             <li>我开网站已经有了两年啦~</li>
                           </ul>
                       </article>
