--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
                 <br><span id="welcome">Loading........</span>
                 <div id="411119"></div>
                 <p>PS:泉州访客可能无法访问除本页外的其他网站
-                <br>找我就加我QQ</p>
-                <p>欢迎小可爱！关于Fmkli的信息可以看看下面的简介</p>
-                <p>这个主页是原罪用用GDUI写的，感谢原罪嘿嘿嘿</p>
+                <br>找我就加我QQ
+                <br>欢迎小可爱！关于Fmkli的信息可以看看下面的简介
+                <br>这个主页是原罪用用GDUI写的，感谢原罪嘿嘿嘿
+                </p>
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
                 <div class="gd-article">
