--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
                 <div class="gd-article">
+                    <h3>听首C418的纯音乐？</h3>
+                    <iframe name="myf"></iframe>
+                </div>
+            </div>
+            <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
+                <div class="gd-article">
                     <a href="https://blog.wz-software.top"><img class="gd-rc gd-shadow-20 gd-shadow-h-5 gd-box-margin-20" src="./nman.png" width="100%" height="100%" alt="大爱柠檬（广告）"></a>
                 </div>
             </div>
@@ -104,5 +110,10 @@
         <script src="./main.js"></script>
 <!-- <script src="./langmain.js"></script> <script src="./langcon.js"></scrip> -->
         <script src="./wel.js"></script>
+        <script>
+            onload = function(){
+                window.myf.location.href = '//music.163.com/outchain/player?type=0&id=400041877&auto=0&height=430';
+            }
+        </script>
     </body>
 </html>
