--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="gd-article">
                     <h3>听首C418的纯音乐？</h3>
                     <iframe name="myf"></iframe>
-                    <button onclick="music();" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">换一首</button>
+                    <button onclick="musicc418();" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">换一首</button>
                 </div>
             </div>
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
@@ -119,7 +119,7 @@
                     window.myf.location.href = '//music.163.com/outchain/player?type=2&id=4010239&auto=1&height=66';
                 }
             }
-            function music(){
+            function musicc418(){
                 if (music == 1){
                     music = 2
                     window.myf.location.href = '//music.163.com/outchain/player?type=2&id=4010201&auto=1&height=66';
