--- a/index.html
+++ b/index.html
@@ -117,11 +117,14 @@
             }
             function musicc418(){
                 if (music == 1){
-                    music = 2
-                    window.myf.location.href = '//music.163.com/outchain/player?type=2&id=4010201&auto=1&height=66';
+                    music = 3
+                    window.myf.location.href = '//music.163.com/outchain/player?type=2&id=4010201&auto=0&height=66';
                 } else if (music == 2){
+                    music = 2
+                    window.myf.location.href = '//music.163.com/outchain/player?type=2&id=4010239&auto=0&height=66';
+                } else if (music == 3){
                     music = 1
-                    window.myf.location.href = '//music.163.com/outchain/player?type=2&id=4010239&auto=1&height=66';
+                    window.myf.location.href = '//music.163.com/outchain/player?type=2&id=1957256466&auto=0&height=66';
                 }
   		    }
         </script>
