--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <a class="lianjie" rel="noopener" class="icpgrass" href="https://union.estu.site/" target="_blank">草GUC-20220166</a>
                     <br><a class="lianjie" href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
                     <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
-                    <br><a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS"><img src="https://sdk.51.la/icon/1-1.png"></a>本站已经开启了统计啦~
+                    <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
                     <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>
                     <br><p>本站虽丑，但又不是不能用</p>
                     <br><p>Theme by Grass Design.</p>
@@ -134,5 +134,8 @@
                 }
   		    }
         </script>
+        <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
+            <a href="https://myssl.com/www.imfmkli.top?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
+        </div>
     </body>
 </html>
