--- a/IE.html
+++ b/IE.html
@@ -13,6 +13,6 @@
     </head>
     <body>
         <div class="center1 red"><h1>注意！本站不再对Internet Explorer进行支持</h1></div>
-        <p>请使用其他现代浏览器，如Chrome，Firefox，360安全浏览器（大嘘）</p>
+        <p class="center1">请使用其他现代浏览器，如Chrome，Firefox，360安全浏览器（大嘘）</p>
     </body>
 </html>
