--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     </head>
     <body style="background-color:rgb(247,249,250)" onload="test();">
         <!--[if IE]>
+            <script>
+                location.replace("/IE.html");
+            </script>
         <![endif]-->
 
         <!-- 网站顶栏 -->
@@ -109,7 +112,6 @@
                     <a class="lianjie" rel="noopener" class="icpgrass" href="https://union.estu.site/" target="_blank">草GUC-20220166</a>
                     <br><a class="lianjie" href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
                     <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
-                    <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
                     <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>
                     <br><p>本站虽丑，但又不是不能用</p>
                     <br><p>Theme by Grass Design.</p>
@@ -155,8 +157,5 @@
                 }
   		    }
         </script>
-        <div id="cc-myssl-id" style="position: fixed;right: 0;bottom: 0;width: 65px;height: 65px;z-index: 99;">
-            <a href="https://myssl.com/www.imfmkli.top?from=mysslid"><img src="https://static.myssl.com/res/images/myssl-id.png" alt="" style="width:100%;height:100%"></a>
-        </div>
     </body>
 </html>
