--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="markdown.css">
         <link rel="stylesheet" type="text/css" href="font.css">
         <script src="./jquery.min.js"></script>
+        <script src="./ie.js"></script>
     </head>
     <body style="background-color:rgb(247,249,250)" onload="test();">
 
