--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                     <br><a class="lianjie" href="https://icp.gov.moe/?keyword=20221145" rel="noopener" target="_blank" rel="nofollow" class="a-p">萌ICP备20221145号</a>
                     <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                     <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>
+                    <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
                     <br><p>本站虽丑，但又不是不能用</p>
                     <br><p>Theme by Grass Design.</p>
                 </div>
