--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <!-- 音乐版块 -->
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
                 <div class="gd-article">
-                    <h3>听首C418的纯音乐？</h3>
+                    <h3>听首音乐？</h3>
                     <!-- 感谢网易云音乐提供支持 -->
                     <iframe name="myf"></iframe>
                     <audio id="musicau"></audio>
