--- a/nbpl.html
+++ b/nbpl.html
@@ -1,2 +1,4 @@
 <meta charset="UTF-8" name="viewport" content="width=device-width">
 <h1>你 被 骗 了</h1>
+<script type="text/javascript" src="//js.users.51.la/21370137.js"></script>
+<h6><a href="https://web.51.la/report/main?comId=21370137">点我查看被骗人数</a></h6>
