--- a/index.html
+++ b/index.html
@@ -129,9 +129,11 @@
         <!-- 网页遮盖 -->
         <div class="gd-overlay" id="overlay"></div>
 
-        <!-- 一堆引入和js -->
+        <!-- 一堆引入 -->
         <script src="./main.js"></script>
         <!-- <script src="./langmain.js"></script> <script src="./langcon.js"></scrip> -->
         <script src="./wel.js"></script>
+        <!-- tidio -->
+        <script src="//code.tidio.co/6dto8kyviklqvdz7hzplghpoo77c2wsw.js" async></script>
     </body>
 </html>
