--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h2><div id="contentss"></div></h2>
                 <h1><div id="contentsss"></div></h1>
             </div>
-            <!-- 个人信息 -->
+
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5 gd-post-center">
                 <h2>屑鸽子Fmkli</h2>
                 <img src="https://www.imfmkli.top/fmkli.png" width="100" height="100" alt="Fmkli的照片">
@@ -59,7 +59,20 @@
                 <br>这个主页是原罪用用GDUI写的，感谢原罪嘿嘿嘿
                 </p>
             </div>
+
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
+                <!-- 这屑网站居然有公告！奇迹！奇迹！-->
+                <div class="gd-article">
+                    <h3>公告</h3>
+                    <article class="markdown-body">
+                          <ul>
+                            <li>我是Fmkli，一只鸽鸽子，咕了很久</li>
+                          </ul>
+                      </article>
+                </div>
+                <hr>
+
+                <!-- 个人信息 -->
                 <div class="gd-article">
                     <h3>About</h3>
                     <article class="markdown-body">
