--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h3>公告</h3>
                     <article class="markdown-body">
                           <ul>
-                            <li>我是Fmkli，一只鸽鸽子，咕了很久</li>
+                            <li>这屑网站居然有公告！奇迹！奇迹！</li>
                           </ul>
                       </article>
                 </div>
