--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width">
         <meta name="description" content="菜菜鸽子的主页，来吧来吧~"/>
-        <title>鸽子主页~</title>
+        <title>鸽子主页</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="markdown.css">
         <link rel="stylesheet" type="text/css" href="font.css">
