--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="markdown.css">
         <link rel="stylesheet" type="text/css" href="font.css">
+        <link rel="stylesheet" type="text/css" href="post.css">
         <script src="./jquery.min.js"></script>
         <script src="./ie.js"></script>
     </head>
@@ -100,6 +101,22 @@
                     <h3>说说</h3>
                     <p>由于jsd拖慢网站速度，说说跳转去另一个页面</p>
                     <a href="https://www.imfmkli.top/say.html" class="gd-button gd-h gd-rc gd-shadow gd-shadow-h-5">加载说说</a>
+                </div>
+            </div>
+
+            <!-- 文章板块 -->
+            <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
+                <div class="gd-article">
+                    <h3>博客の文章</h3>
+                    <p>仅显示前三篇</p>
+                    <!-- 来源：blog.imfmkli.top -->
+                    <!-- 感谢 https://rss2json.com/ の支持！-->
+                    <div id="posts">
+                        <div id="posts-list">
+                            
+                        </div>
+                        <div id="posts-stop"></div>
+                    </div>
                 </div>
             </div>
 
