--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="gd-box gd-suit gd-rc gd-shadow-20 gd-shadow-h-5">
                 <div class="gd-article">
                     <h3>博客の文章</h3>
-                    <p>仅显示前三篇</p>
+                    <p>仅显示前三篇，点击标题跳转</p>
                     <!-- 来源：blog.imfmkli.top -->
                     <!-- 感谢 https://rss2json.com/ の支持！-->
                     <div id="posts">
