--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <br><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span>
                     <br>Friend Links：<a class="lianjie" href="https://dwp.xn--vl1a.tech/">DzxiumWebPages</a>--<a class="lianjie" href="https://boblive.vercel.app/">BOB实况</a>
                     <br>本站已经开启了<a target="_blank" title="51la网站统计" href="https://v6.51.la/land/JgapU3Sla12DMquS">统计（使用51.la）</a>啦~
-                    <br><p>本站虽丑，但又不是不能用</p>
+                    <br><p><div id="tipss" onclick="gettip();">本站虽丑，但又不是不能用</div></p>
                     <br><p>Theme by Grass Design.</p>
                 </div>
             </div>
