--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
         <link rel="stylesheet" type="text/css" href="markdown.css">
         <link rel="stylesheet" type="text/css" href="font.css">
         <link rel="stylesheet" type="text/css" href="post.css">
+        <link rel="manifest" href="manifest.json" />
+
+        <!-- 玩玩PWA -->
+        <!-- ios support -->
+        <link rel="apple-touch-icon" href="images/icons/128.png" />
+        <link rel="apple-touch-icon" href="images/icons/144.png" />
+        <link rel="apple-touch-icon" href="images/icons/192.png" />
+        <link rel="apple-touch-icon" href="images/icons/256.png" />
+        <link rel="apple-touch-icon" href="images/icons/512.png" />
+        <meta name="apple-mobile-web-app-status-bar" content="#fdfdfd" />
+        <meta name="theme-color" content="#c1e4e3" />
+        <!-- 玩玩PWA.End-->
+
         <script src="./jquery.min.js"></script>
         <script src="./ie.js"></script>
     </head>
