--- a/index.html
+++ b/index.html
@@ -176,5 +176,7 @@
         <script src="./main.js"></script>
         <!-- <script src="./langmain.js"></script> <script src="./langcon.js"></scrip> -->
         <script src="./wel.js"></script>
+        <!-- tidio -->
+        <script src="//code.tidio.co/6dto8kyviklqvdz7hzplghpoo77c2wsw.js" async></script>
     </body>
 </html>
